--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
   "name": "geolocation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "web.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node web.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Viorel1989/geolocation.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Viorel1989/geolocation/issues"
-  },
-  "homepage": "https://github.com/Viorel1989/geolocation#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "engines": {
-    "node": "14.x"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   }
 }
