--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,18 @@ services:
       - ./src:/usr/geolocation/src
     env_file:
       - .env
+  geo_database:
+    image: postgres:13-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /data/postgres
+    ports:
+      - "5432:5432"
+  adminer:
+    image: adminer
+    ports:
+      - "3001:8080"
+volumes:
+  postgres:
