--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pg": "^8.7.1",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^6.9.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.3.0"
   }
 }
