--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
       - ./src:/usr/geolocation/src
     env_file:
       - .env
-  geo_database:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    command: sleep infinity
+  postgres:
     image: postgres:13-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -22,5 +25,8 @@ services:
     image: adminer
     ports:
       - "3001:8080"
+    environment:
+      ADMINER_DESIGN: nette
+      ADMINER_DEFAULT_SERVER: postgres
 volumes:
   postgres:
