--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3.7"
 
 services:
+  redis:
+    image: redis
+    container_name: cache
+    ports:
+      - "6379:6379"
   app:
     build: .
     ports:
