--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^9.0.2",
@@ -19,6 +20,7 @@
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
     "pug": "2.0.0-beta11",
+    "redis": "^3.1.2",
     "sequelize": "^6.9.0"
   },
   "devDependencies": {
