--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,14 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./src:/usr/geolocation/src
+      - ./src:/usr/geolocation/services
     env_file:
       - .env
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      - postgres
+    restart: always
   postgres:
     image: postgres:13-alpine
     environment:
