--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
   "devDependencies": {
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.3.0"
-  }
+  },
+  "description": "[Node.js](https://nodejs.org/en/) application built with [Express](https://expressjs.com/).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Viorel1989/geolocation.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Viorel1989/geolocation/issues"
+  },
+  "homepage": "https://github.com/Viorel1989/geolocation#readme"
 }
